Add support to creating a tab on extension icon click
- add tsfmt for formating TypeScript code

--- a/src/resources/chrome/manifest.json
+++ b/src/resources/chrome/manifest.json
@@ -4,9 +4,9 @@
   "version": "0.1.0",
   "description": "Draft is a note taking extension",
   "manifest_version": 2,
+  "browser_action": {},
   "background": {
     "scripts": [
-      "gapi.js",
       "background.js"
     ],
     "persistent": false
