--- a/3rdparty/nodejs/package.json
+++ b/3rdparty/nodejs/package.json
@@ -4,8 +4,9 @@
   "license": "MIT",
   "devDependencies": {
     "@bazel/typescript": "0.25.0",
-    "@types/gapi.client.drive": "v3",
     "@types/chrome": "^0.0.79",
-    "typescript": "3.3.1"
+    "@types/gapi.client.drive": "v3",
+    "typescript": "3.3.1",
+    "typescript-formatter": "^7.2.2"
   }
 }
