Add scaffolding for adding react components
- add react library to chrome extension indices
- rename app to background to match chrome naming scheme
- fix typo in readme file
- add note about using editor with TypeScript

--- a/src/resources/chrome/manifest.json
+++ b/src/resources/chrome/manifest.json
@@ -7,7 +7,7 @@
   "browser_action": {},
   "background": {
     "scripts": [
-      "background.js"
+      "background_bundle.js"
     ],
     "persistent": false
   },
