--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,41 @@
 {
-  "compilerOptions": {
-    "sourceMap": true,
-    "noImplicitAny": true,
-    "experimentalDecorators": true,
-    "jsx": "react",
-    "rootDirs": [".", "../bazel-bin/examples"],
-    "types": [],
-    "strict": true,
-    "target": "es6",
-    "module": "commonjs",
-    "esModuleInterop": true
+	"compilerOptions": {
+		"jsx": "react",
+		"sourceMap": true,
+		"emitDecoratorMetadata": true,
+		"experimentalDecorators": true,
+		"alwaysStrict": true,
+		"lib": [
+			"es2018",
+			"dom"
+		],
+		"noImplicitAny": true,
+		"types": [],
+		"strict": true,
+		"outDir": "./.out",
+		"baseUrl": ".",
+		"rootDirs": [
+			".",
+			"bazel-out/k8-fastbuild/genfiles",
+			"bazel-out/k8-fastbuild/bin"
+		],
+		"paths": {
+      "*": [
+        "./3rdparty/nodejs/node_modules/*",
+        "./3rdparty/nodejs/node_modules/@types/*"
+      ],
+			"draft/*": [
+				"./*",
+				"./bazel-out/k8-fastbuild/genfiles/*",
+				"./bazel-out/k8-fastbuild/bin/*"
+			]
+		}
+	},
+  "bazelOptions": {
+    "suppressTsconfigOverrideWarnings": true
   },
-  "paths": {
-    "draft/*": ["*"]
-  }
+  "exclude": [
+		".git",
+		"./3rdparty/nodejs/node_modules"
+  ]
 }
