--- a/3rdparty/nodejs/package.json
+++ b/3rdparty/nodejs/package.json
@@ -6,7 +6,13 @@
     "@bazel/typescript": "0.25.0",
     "@types/chrome": "^0.0.79",
     "@types/gapi.client.drive": "v3",
+    "@types/react": "^16.8.3",
+    "@types/react-dom": "^16.8.1",
     "typescript": "3.3.1",
     "typescript-formatter": "^7.2.2"
+  },
+  "dependencies": {
+    "react": "^16.8.2",
+    "react-dom": "^16.8.2"
   }
 }
