--- a/src/typescript/draft/components/app/BUILD
+++ b/src/typescript/draft/components/app/BUILD
@@ -3,10 +3,12 @@ package(default_visibility = ["//visibility:public"])
 load("@npm_bazel_typescript//:defs.bzl", "ts_library")
 
 ts_library(
-    name = "draft",
+    name = "app",
     srcs = ["index.tsx"],
     deps = [
-        "//src/typescript/draft/components/app",
+        "//src/typescript/draft/components/editor",
+        "//src/typescript/draft/components/sidebar",
+        "//src/typescript/draft/components/preview",
         "@npm//@types/react",
         "@npm//@types/react-dom",
     ],
