--- a/src/typescript/draft/components/editor/BUILD
+++ b/src/typescript/draft/components/editor/BUILD
@@ -3,11 +3,9 @@ package(default_visibility = ["//visibility:public"])
 load("@npm_bazel_typescript//:defs.bzl", "ts_library")
 
 ts_library(
-    name = "draft",
+    name = "editor",
     srcs = ["index.tsx"],
     deps = [
-        "//src/typescript/draft/components/app",
         "@npm//@types/react",
-        "@npm//@types/react-dom",
     ],
 )
