--- a/3rdparty/nodejs/package.json
+++ b/3rdparty/nodejs/package.json
@@ -8,11 +8,19 @@
     "@types/gapi.client.drive": "v3",
     "@types/react": "^16.8.3",
     "@types/react-dom": "^16.8.1",
+    "tslint": "^5.13.0",
+    "tslint-react": "^3.6.0",
     "typescript": "3.3.1",
-    "typescript-formatter": "^7.2.2"
+    "typescript-formatter": "^7.2.2",
+    "typescript-tslint-plugin": "^0.3.1"
   },
   "dependencies": {
     "react": "^16.8.2",
     "react-dom": "^16.8.2"
+  },
+  "scripts": {
+    "fmt": "tsfmt -r --useTsfmt tsfmt.json --baseDir ../../",
+    "lint": "tslint -c tslint.json --project ../../",
+    "lint.fix": "tslint --fix -c tslint.json --project ../../"
   }
 }
