Update bazel rule to latest version

--- a/3rdparty/nodejs/package.json
+++ b/3rdparty/nodejs/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "license": "MIT",
   "devDependencies": {
-    "@bazel/typescript": "0.25.0",
+    "@bazel/jasmine": "^0.27.5",
+    "@bazel/typescript": "^0.27.5",
     "@types/chrome": "^0.0.79",
     "@types/gapi.client.drive": "v3",
+    "@types/jasmine": "^3.3.10",
     "@types/react": "^16.8.3",
     "@types/react-dom": "^16.8.1",
     "tslint": "^5.13.0",
