Add support for adding tests to components with Enzyme
- add up to date types for jasmine-enzyme
- add helper module for jsdom
- update readme file with introductions on how to run tests
- update tsconfig to enabled esModuleInterop
- add node_modules directory to bazelignore file

--- a/3rdparty/nodejs/package.json
+++ b/3rdparty/nodejs/package.json
@@ -6,10 +6,18 @@
     "@bazel/jasmine": "^0.27.7",
     "@bazel/typescript": "^0.27.7",
     "@types/chrome": "^0.0.79",
+    "@types/enzyme": "^3.9.1",
+    "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/gapi.client.drive": "v3",
     "@types/jasmine": "^3.3.10",
+    "@types/jasmine-enzyme": "^3.6.6",
+    "@types/jsdom": "^12.2.3",
     "@types/react": "^16.8.3",
     "@types/react-dom": "^16.8.1",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.11.2",
+    "jasmine-enzyme": "^7.0.2",
+    "jsdom": "^14.0.0",
     "tslint": "^5.13.0",
     "tslint-react": "^3.6.0",
     "typescript": "3.3.1",
