Update nodejs rules
- add coverage flag to editor test

--- a/tests/typescript/draft/components/editor/BUILD
+++ b/tests/typescript/draft/components/editor/BUILD
@@ -19,7 +19,8 @@ ts_library(
 )
 
 jasmine_node_test(
-    name = "test",
+    name = "editor",
+    coverage = True,
     deps = [
         ":test_lib",
     ],
