Add support to parsing markdown with showdown

--- a/3rdparty/nodejs/package.json
+++ b/3rdparty/nodejs/package.json
@@ -14,10 +14,12 @@
     "@types/jsdom": "^12.2.3",
     "@types/react": "^16.8.3",
     "@types/react-dom": "^16.8.1",
+    "@types/showdown": "^1.9.2",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.11.2",
     "jasmine-enzyme": "^7.0.2",
     "jsdom": "^14.0.0",
+    "showdown": "^1.9.0",
     "tslint": "^5.13.0",
     "tslint-react": "^3.6.0",
     "typescript": "3.3.1",
